# semver-release

./: .gitignore  CHANGELOG.md  Jenkinsfile  README.md  pyproject.toml  setup.cfg
src/semver_release/: __init__.py  main.py
