[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name='semver_release'
description='Test semantic versioning release strategy'
readme='README.md'
requires-python = ">=3.7"
# dependencies=[]
dynamic = ["version"]

# [tool.setuptools.dynamic]
# version = {attr = "semver_release.__version__"}

# [tool.setuptools.packages.find]
# where=["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"
write_to = "src/semver_release/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src/"
